--- a/css/comment.css
+++ b/css/comment.css
@@ -1,8 +1,13 @@
 .add-comment h3{
  margin: 0 0 10px;
  font-size: 20px ;
- font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
+.add-comment h3{
+    margin: 0 0 10px;
+    font-size: 18px ;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+   }
 .add-comment textarea{
     display: block;
     margin-top: 10px;
